--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <footer id="contato">
       <h2>Contato:</h2>
-      <p>Email: everaldo_costa@estudantesesisenai.org.br</p>
+      <p>Email: everaldo_costa@estudante.sesisenai.org.br</p>
 
     </footer>
 
