--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
           <li><a href="#Habilidades">Habilidades</a></li>
           <li><a href="#Projetos">Projetos</a></li>
           <li><a href="#Contato">Contato</a></li>
+          <li><a href="#Cadastro">Cadastro</a></li>
         </ul>
       </nav>
     </header>
