--- a/index.html
+++ b/index.html
@@ -1,159 +1,178 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <title>Meu Portfólio</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        background-color: #f4f4f4;
-        color: #333;
-      }
+  <title>Everaldo Fernando Dalla Costa</title>
+</head>
+  
+  <style> 
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body{
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    header{
+      background-color: black;
+      color:Gainsboro;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1{
+      margin-bottom: 10px;
+    }
 
-      header {
-        background-color: black;
-        color: Gainsboro;
-        padding: 20px;
-        text-align: center;
-      }
+    nav {
+      margin-top: 10px;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+    }
+   nav ul li {
+      margin: 0 15px;
+    }
+    nav ul li a { 
+      color: gray;
+      text-decoration: none;
+      font-weight: 800px
+    }
+     nav ul li a:hover {
+      text-decoration: underline;
+    }
+    main { 
+      padding: 20px;
+     margin: 20px auto;
+     max-width: 800px;
+     }
 
-      header h1 {
-        margin-bottom: 10px;
-      }
+    h1 {
+      margin-bottom: 10px;
+    }
+    section{
+      padding: 20px;
+      margin: 20px auto;
+      max-width: 800px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);}
 
-      nav {
-        margin-top: 10px;
-      }
+     ul {
+      list-style: none;
+      padding-left: 0;
+     }
 
-      nav ul {
-        list-style: none;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-      }
-
-      nav ul li {
-        margin: 0 15px;
-      }
-
-      nav ul li a:hover {
-        text-decoration: underline;
-      }
-
-      nav ul li a {
-        color: gray;
-        text-decoration: none;
-        font-weight: 800px
-      }
-
-      main {
-        padding: 20px margin: 20px auto;
-        max-width: 800px;
-      }
-
-      h1 {
-        margin-bottom: 10px
-      }
-
-      section {
-        padding: 20px;
-        margin: 20px auto;
-        max-width: 800px;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0 1);
-      }
-
-      ul {
-        list-style: none;
-        padding-lest: 0;
-      }
-
-      ul li {
-        background: #ddd;
-        margin: 5px 0;
-        padding: 10px;
-        border-radius: 5px;
-        border: 2px solid gray;
-      }
-
-      .projeto {
-        margin-top: 20px;
-      }
-
-      footer {
-        background-color: #333;
-        color: #FFF;
-        text-align: center;
-        padding: 10px 0;
-      }
-
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-    </style>
-    <script type="text/javascript" src="./index.js" defer=""></script>
-    <link rel="stylesheet" href="./index.css">
-  </head>
-
-
+    ul li {
+     background: #ddd;
+     margin: 5px 0;
+     padding: 10px;
+     border-radius: 5px;
+      border: 2px solid gray;
+    }
+    .projeto {
+      margin-top: 20px;
+   }
+   footer{
+    background-color: #333;
+    color: #FFF;
+    text-align: center;
+    padding: 10px 0;
+   }
+   h2{font-family: times new romam;
+  font-size: 25px;
+  font-weight: 300;
+  text-align: center;
+  
+   }
+  form{ max-width: 400px;
+  margin: 20px auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0aá, 0, 0.1);}
+  label, input {display: block;
+  margin-bottom:10px;}
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  input[type="cid"],
+  input[type="est"],{width:95% padding: 50px;
+  border: 20px; solid #ccc;}
+  </style>
   <body>
-    <header>
-      <h1>Everaldo Fernando Dalla Costa 
-      </h1>
-      <p>Desenvolvedor Web</p>
-      <nav>
-        <ul>
-          <li><a href="#Sobre">Sobre Mim</a></li>
-          <li><a href="#Habilidades">Habilidades</a></li>
-          <li><a href="#Projetos">Projetos</a></li>
-          <li><a href="#Contato">Contato</a></li>
-          <li><a href="#Cadastro">Cadastro</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section id="Sobre">
-        <h2>Sobre mim</h2>
-        <p>Descrição de mim</p>
-      </section>
+  <header> 
+  <h1>Everaldo Fernando Dalla Costa</h1>
+  <p>Desenvolvedor Web</p>
+<nav>
+  <ul>
+    <li><a href="#Sobre">Sobre Mim</a></li>
+    <li><a href="#Habilidades">Habilidades</a></li>
+    <li><a href="#Projetos">Projetos</a></li>
+    <li><a href="#Contato">Contato</a></li>
+    <li><a href="#Cadastro">Cadastro</a></li>
+</ul>
+</nav>
+</header>
+<main>
+<section id="Sobre">
+  <h2>Sobre mim</h2>
+  <p>Descrição de mim</p>
+</section>
 
-      <section id="Habilidades">
-        <h2>habilidades</h2>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Outra habilidade</li>
-        </ul>
-      </section>
+<section id="Habilidades">
+  <h2>habilidades</h2>
+  <ul>
+    <li>HTML</li>
+     <li>CSS</li>
+    <li>Outra habilidade</li>
+        
+  </ul>
+</section>
+<section id="Projetos">
+  <h2>Projetos</h2>
+  <div class="projeto">
+    <h3>Projeto 1</h3>
+    <p>Breve descrição do projeto.</p>
+  </div>
+  <div class="projeto">
+    <h3>Projeto 2</h3>
+    <p>Breve descrição do projeto</p>
+  </div>
+</section>
+<section id="Cadastro">
+  <h2>Cadastro</h2>
 
-      <section id="projeto">
-        <h2>Projetos</h2>
-        <div class="projeto">
-          <h3>Projeto 1</h3>
-          <p>Breve descrição do projeto.</p>
-        </div>
+<form>
+<label>Nome:</label>
+<input type="text" id="nome" name="nome" required>
+<label>email:</label>
+<input type="email" id="email" name="email" required>
+<label>Telefone:</label>
+<input type="Tel" id="telefone" name="telefone" required>
+<label>Cidade:</label>
+<input type="Cid" id="cidade" name="cidade" required>
+<label>Estado:</label>
+<input type="Est" id="estado" name="estado" required>
+<input type="submit" value="Cadastrar">
+</form>
 
-        <div class="Projeto 2">
-          <h3>Projeto 2</h3>
-          <p>Breve descrição do projeto</p>
-        </div>
-      </section>
-    </main>
+  
+</section>
+</main>
 
-    <footer id="contato">
-      <h2>Contato:</h2>
-      <p>Email: everaldo_costa@estudante.sesisenai.org.br</p>
+  <footer id="Contato">
+    <h2>Contato:</h2>
+    <p>Email: everaldo_costa@estudante.sesisenai.org.br</p>
 
-    </footer>
-
-
-
+  </footer>
+  
 
 
 
   </body>
-
 </html>
